# PlantOS

./: .gitignore  .gitleaks.toml  README.md  _build.bat  _build.js  _build.py  _check_api.py  _check_build.py  _check_data.py  _deploy_backup.py  _run_backend_tests.bat  _run_edge_tests.bat  _vps_check.bat  _vps_contain.bat  _vps_contain2.bat  _vps_contain2b.bat  _vps_identify2.bat  _vps_ports.bat  _vps_run_contain.bat  _vps_sudo.bat
backend/: Dockerfile  alembic.ini  pyproject.toml  run_asset_tests.py  test_output.txt
backend/app/: main.py
backend/app/api/: v1.py  ws.py
backend/app/core/: config.py  edge_offline_detector.py  events.py  security.py
backend/app/db/: __init__.py  base.py  tdengine.py
backend/app/middleware/: auth.py
backend/app/modules/: __init__.py
backend/app/seed/: vf_demo_plant.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_metadata_tables.py  002_alarm_tables.py  003_event_tables.py  004_users_table.py  005_asset_signal_upgrade.py  006_asset_templates.py  007_calculated_signals_and_kpis.py  008_add_edge_node_hostname_ip_version.py  009_add_edge_node_signal_backlog_count.py  009_edge_v2_tables.py  010_edge_user_assignments.py  010_edge_v2_tables.py  011_edge_user_assignments.py
backend/tests/: conftest.py  test_asset_api.py  test_auth_security.py  test_contracts_apply.py  test_contracts_preview.py  test_contracts_validator.py  test_formula_engine.py  test_health.py  test_historian_interface.py  test_measurement_api.py  test_models.py  test_regression_am1.py  test_signal_api.py  test_tdengine_adapter.py
(+750 files in other folders)
